--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -15,7 +15,13 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
+  </configSections>
   <log4net>
     <!-- Define some output appenders -->
     <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net">
@@ -34,9 +40,14 @@
       <appender-ref ref="rollingFile" />
     </root>
   </log4net>
-  <connectionStrings>  
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_UAT;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
-    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_UAT;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <connectionStrings>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai_test;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
+    <add name="EFModelContext" connectionString="data source=10.10.10.41;initial catalog=AsquareMirai_test;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=localhost;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient" />
+    <add name="EFModelContext" connectionString="data source=localhost;initial catalog=AsquareMirai;persist security info=True;user id=sa;password=vertis!2#;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    -->
+    <add name="elmah" connectionString="Data Source=localhost;Initial Catalog=AsquareMirai_ErrorLog;User Id=Elmah;Password=vertis!2#;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="SMTPSERVER" value="smtp.gmail.com" />
@@ -100,12 +111,15 @@
     <add key="WorkingKey" value="114B7C4CAC5C321921DC47725184835A" />
     <add key="AccessCode" value="AVSC05CD01BO26CSOB" />
     <add key="redirectSiteUrl" value="http://consult.s.miraihealth.com" />
-  </appSettings>
+    <add key="elmah.mvc.disableHandler" value="false" /><add key="elmah.mvc.disableHandleErrorFilter" value="false" />
+    <add key="elmah.mvc.requiresAuthentication" value="false" /><add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
+    <add key="elmah.mvc.allowedRoles" value="*" /><add key="elmah.mvc.allowedUsers" value="*" /><add key="elmah.mvc.route" value="elmah" />
+    <add key="elmah.mvc.UserAuthCaseSensitive" value="true" /></appSettings>
 
   <system.web>
     <sessionState timeout="60"></sessionState>
     <globalization culture="en-US" uiCulture="en" />
-    <customErrors mode="RemoteOnly">
+    <customErrors mode="On" defaultRedirect="/Home/Error">
       <error statusCode="404" redirect="~/Home/Static404" />
     </customErrors>
     <compilation debug="true" targetFramework="4.5">
@@ -132,7 +146,11 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-  </system.web>
+  <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules></system.web>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -192,7 +210,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer>
+  <modules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+    </modules></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -315,4 +337,8 @@
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
+  <elmah>
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="elmah" applicationName="consult_staging" />
+    <errorMail from="service@miraihealth.com" to="priyanka.p@vertisinfotech.com" async="true" smtpServer="smtp.gmail.com" smtpPort="587" userName="noreply@vertisinfotech.com" password="Smtp!2#4" useSsl="true" />
+  </elmah>
 </configuration>
