Updated bower.json for bootstrap packages. Latest code drop from Poorva.

--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -440,10 +440,19 @@
     <Content Include="Bower\components\angular-flash-alert\test\angular-flash.html" />
     <Content Include="Bower\components\angular-flash-alert\test\angular-flash_test.js" />
     <Content Include="Bower\components\angular-ui-calendar\src\calendar.js" />
+    <Content Include="Bower\components\angular-underscore\angular-underscore.js" />
+    <Content Include="Bower\components\angular-underscore\angular-underscore.min.js" />
     <Content Include="Bower\components\angular\angular-csp.css" />
     <Content Include="Bower\components\angular\angular.js" />
     <Content Include="Bower\components\angular\angular.min.js" />
     <Content Include="Bower\components\angular\index.js" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap-theme.css" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap-theme.min.css" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap.css" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap.min.css" />
+    <Content Include="Bower\components\bootstrap-css\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Bower\components\bootstrap-css\js\bootstrap.js" />
+    <Content Include="Bower\components\bootstrap-css\js\bootstrap.min.js" />
     <Content Include="Bower\components\bootstrap\dist\css\bootstrap-theme.css" />
     <Content Include="Bower\components\bootstrap\dist\css\bootstrap-theme.min.css" />
     <Content Include="Bower\components\bootstrap\dist\css\bootstrap.css" />
@@ -878,6 +887,8 @@
     <Content Include="Bower\components\moment\templates\globals.js" />
     <Content Include="Bower\components\moment\templates\locale-header.js" />
     <Content Include="Bower\components\moment\templates\test-header.js" />
+    <Content Include="Bower\components\underscore\underscore-min.js" />
+    <Content Include="Bower\components\underscore\underscore.js" />
     <Content Include="Content\bootstrap-responsive.css" />
     <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap-tokenfield.css" />
@@ -1211,6 +1222,25 @@
     <Content Include="Bower\components\angular-flash-alert\package.json" />
     <Content Include="Bower\components\angular-flash-alert\src\.jshintrc" />
     <Content Include="Bower\components\angular-flash-alert\test\.jshintrc" />
+    <Content Include="Bower\components\angular-underscore\.bower.json" />
+    <Content Include="Bower\components\angular-underscore\bower.json" />
+    <Content Include="Bower\components\angular-underscore\package.json" />
+    <Content Include="Bower\components\angular-underscore\README.md" />
+    <Content Include="Bower\components\bootstrap-css\.bower.json" />
+    <Content Include="Bower\components\bootstrap-css\bower.json" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap-theme.css.map" />
+    <Content Include="Bower\components\bootstrap-css\css\bootstrap.css.map" />
+    <Content Include="Bower\components\bootstrap-css\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Bower\components\bootstrap-css\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Bower\components\bootstrap-css\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Bower\components\bootstrap-css\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Bower\components\bootstrap-css\LICENSE" />
+    <Content Include="Bower\components\bootstrap-css\README.md" />
+    <Content Include="Bower\components\underscore\.bower.json" />
+    <Content Include="Bower\components\underscore\bower.json" />
+    <Content Include="Bower\components\underscore\LICENSE" />
+    <Content Include="Bower\components\underscore\README.md" />
+    <Content Include="Bower\components\underscore\underscore-min.map" />
     <None Include="Properties\PublishProfiles\consult.pubxml" />
     <None Include="Properties\PublishProfiles\ConsultToFileSystem.pubxml" />
     <None Include="Properties\PublishProfiles\dev.pubxml" />
