--- a/MiraiConsultMVC/bower.json
+++ b/MiraiConsultMVC/bower.json
@@ -1,8 +1,20 @@
 {
-  "name": "MiraiConsultMVC",
+  "name": "bower-install-training",
+  "version": "0.0.0",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
-    "angular-bootstrap-calendar": "latest",
-    "angular-bootstrap": "latest",
-    "angular-flash-alert": "latest"
+    "angular": "~1.4.3",
+    "angular-bootstrap": "~0.13.0",
+    "bootstrap-css": "~3.3.4",
+    "angular-ui-calendar": "~1.0.1",
+    "angular-flash-alert": "~1.1.0",
+    "angular-underscore": "~0.5.0",
+    "underscore": "~1.8.3"
   }
 }
